gitops/apps/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels:
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.36.0-plus-alpine
        ports:
        - containerPort: 9090
        resources:
          limits:
            memory: 500Mi
            cpu: 1000m
        volumeMounts:
        - name: data
          mountPath: /etc/linkding/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkding-data
