gitops/apps/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stage
spec:
  ingressClassName: nginx
  rules:
  - host: ld.512.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
